<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clip_encode_text</name>
  <version>0.3.0</version>
  <description>hobot Clip encode text</description>
  <maintainer email="zixi01.chen@horizon.cc">zixi01.chen</maintainer>
  <license>Apache License 2.0</license>

  <depend>clip_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
